syntax = "proto3";
package pylons.pylons;

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";

message History {
  string address = 1; 
  string amount = 2; 
  string cookbook_id = 3; 
  string recipe_id = 4; 
  int64 created_at = 5; 
  string type = 6;
  string tx_id = 7;
}
